--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -30,8 +30,18 @@
             <section>
 
             <section>
-                <strong>Form Results:</strong>
+            <strong>Form Results:</strong>
                 <div id="results"></div>
+            </section>
+
+            <section>
+                <div>
+                    <button type="button"  onclick="return Client.fetchExternalApi(event)">Fetch external api</button>
+                </div>
+                <div id="externalApi"></div>
+                <div id="data"></div>
+                <div id="id"></div>
+                <div id="name"></div>
             </section>
         </main>
 
